# pyimorg

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: pre-release.yaml
pyimorg/: __init__.py  exif.py  filesystem.py  func.py  logger.py
pyimorg/cli/: __init__.py  diff.py  groupby.py
pyimorg/pyimorg/: __init__.py  diff.py  groupby.py
test/: conftest.py  test_func.py
test/cli/: test_diff.py  test_groupby.py  test_root.py  utils.py
test/pyimorg/: test_diff.py  test_groupby.py  utils.py
